# agent-based-hiring-system

./: .gitignore  .trivyignore  CODEBASE_OVERVIEW.md  Dockerfile  Initial_Implementation_Plan.md  Initial_Implementation_Plan_bak.md  Makefile  README.md  SYSTEM_WORKFLOW.md  TREE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: LLMSecOps_Pipeline_Report.md  README.md  actions.yml  build-test.yml  build.yml  deploy-db.yml  deploy-dev.yml  deploy-frontend-dev.yml  deploy-frontend.yml  deploy-services.yml  deploy.yml  frontend-build.yml  llm-eval.yml  terraform-manage.yml  terraform.yml
app/: main.py
db/: README.md  init_db.sql  migrate.sh
db/migrations/: 002_jobs_candidates.sql  003_workflow_artifacts.sql  004_indexes.sql  005_job_requirements.sql  006_candidate_review_state.sql  007_candidate_ranking_state.sql  008_workflow_queue.sql  009_drop_legacy_queue_tables.sql
docs/: DEMO_VERIFICATION.md  README.md  llm_framework_selection_adr.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.css
infra/: .env.example  docker-compose.yml
infra/terraform/: README.md  acm.tf  alb-controller.tf  ecr.tf  eks-fargate.tf  eks.tf  iam.tf  mlflow.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
services/: NEXT_STEPS.md  PROGRESS.md  README.md  docker-compose.yml
services/audit-agent/: Dockerfile  requirements.txt
services/coordinator-agent/: Dockerfile  requirements.txt
services/mlflow/: Dockerfile
(+115 files in other folders)
