[tool.poetry]
name = "agentic-hiring-system"
version = "0.1.0"
description = "Agentic Hiring System"
authors = ["Team 20"]
packages = [
    { include = "agentic_hiring_system" }  # your source code folder
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
openai = "^1.12.0"
pdfplumber = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
